--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,13 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+.DS_Store
 # logs
+venv
+logs
 logs/
+.logs
+.logs/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
